--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -13,7 +13,7 @@ React Hebdo vient de souffler sa 3ème bougie! J'ai fait un [post sur LinkedIn](
 
 Le [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) de la conf [React-Native-Connection](https://reactnativeconnection.io/) (1er Juin à Paris) est ouvert. N'hésitez pas à vous lancer. Le voyage + 2 nuits d'hotel sont convert pour les speakers.
 
-Nouveau: si jamais vous recrutez un dev React (en CDI ou freelance), **[contactez-moi](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{email}})**.
+Nouveau: si jamais vous recrutez un dev React (en CDI ou freelance), **[contactez-moi](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**.
 
 <!-- truncate -->
 
@@ -29,17 +29,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![refine](/emails/issues/132/refine.png)](https://github.com/refinedev/refine)
+[![refine](/emails/issues/135/refine.png)](https://github.com/refinedev/refine)
 
 [**refine - framework React headless pour créer des apps CRUD, 100% open-source**](https://github.com/refinedev/refine)
 
-Préparez-vous à passer au niveau supérieur ! Nous sommes ravis de lancer le Hackathon refine.
-
-Vous pouvez gagner 1500 $ et de nombreux cadeaux !
-
-Nous sommes ravis de collaborer avec Strapi, Appwrite, Meilisearch et Medusa. Ils sponsorisent le Hackathon refine et les gagnants recevront des cadeaux de chacun d'entre eux !
-
-[Plus d'informations sur le Hackathon](https://s.refine.dev/hackathon).
+Jettez un oeil à [refine](https://github.com/refinedev/refine) avant de commencer votre prochain panneau d'administration, tableau de bord ou outil interne. Vous serez étonné de voir à quel point vous pouvez le développez plus vite, et de manière flexible.
 
 ---
 
@@ -169,14 +163,14 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 💡 **[Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)**
 
-🏢 **[Votre entreprise recrute (CDI ou freelance)? Contactez-moi!](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{email}})**
+🏢 **[Vous recrutez en CDI ou freelance? Contactez-moi!](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-- [React-Native-Paris - talks du 8 Février](https://www.youtube.com/playlist?list=PLZsRQnRG-mlJiCuv9q1nBkxaYP9AIl_Rn): 2 vidéos, sourcemaps et react-native-testing-library
-- [React Query rend ton Code 200% Plus Simple](https://www.youtube.com/watch?v=3jlBocCieVU)
+- 🎥 [React-Native-Paris - talks du 8 Février](https://www.youtube.com/playlist?list=PLZsRQnRG-mlJiCuv9q1nBkxaYP9AIl_Rn): 2 vidéos, sourcemaps et react-native-testing-library
+- 🎥 [React Query rend ton Code 200% Plus Simple](https://www.youtube.com/watch?v=3jlBocCieVU)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
