--- a/website/newsletter/135/index.mdx
+++ b/website/newsletter/135/index.mdx
@@ -25,17 +25,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![refine](/emails/issues/132/refine.png)](https://github.com/refinedev/refine)
+[![refine](/emails/issues/135/refine.png)](https://github.com/refinedev/refine)
 
 [**refine - 100% open-source, headless React framework for building CRUD apps**](https://github.com/refinedev/refine)
 
-Get ready to take your skillset to the next level! We are thrilled to launch an Open Source refine Hackathon
-
-You can win $1500 and special swag kits!
-
-We are excited to collaborate with Strapi, Appwrite, Meilisearch, and Medusa. They are sponsoring the refine Hackathon and the winners will get a swag kit from each of them!
-
-[More information about the Hackathon](https://s.refine.dev/hackathon).
+[Check out refine](https://github.com/refinedev/refine) before starting your next admin panel, dashboard or internal tool. You'll be amazed at how much faster you can develop while still remaining flexible!
 
 ---
 
