--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -78,7 +78,7 @@ https://twitter.com/jordwalke/status/1626718819443150849
 - 🧵 [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
 - 📖 [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): nouvelle doc
 - 📜 [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/)
-- 📜 [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explique comment il décide si une feature request sera intégrée ou non à React-Query. Une manière de penser qui rappelle le fameux [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
+- 📜 [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explique comment il décide si une feature sera intégrée à React-Query. Cela me fait penser au [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
 - 📜 [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/)
 - 📜 [Maximising performance with React code splitting techniques](https://edvins.io/react-code-splitting-techniques)
 - 📜 [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react)
