--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -11,7 +11,7 @@ Salut à tous !
 
 React Hebdo vient de souffler sa 3ème bougie! J'ai fait un [post sur LinkedIn](https://link.slo.im/B87Zl) pour expliquer ou j'en suis. TLDR: la newsletter est enfin viable, avec plus de **17500 abonnés**, une belle croissance, et 27k€ de CA généré en 2022. Merci à vous de m'avoir soutenu dans le temps!
 
-Le [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) de la conf [React-Native-Connection](https://reactnativeconnection.io/) (1er Juin à Paris) est ouvert. N'hésitez pas à vous lancer. Le voyage + 2 nuits d'hotel sont convert pour les speakers.
+Le [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) de la conf [React-Native-Connection](https://reactnativeconnection.io/) (1er Juin à Paris) est ouvert. N'hésitez pas à vous lancer. Le voyage et 2 nuits d'hôtel sont pris en charge pour les speakers.
 
 Nouveau: si jamais vous recrutez un dev React (en CDI ou freelance), **[contactez-moi](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**.
 
@@ -39,16 +39,6 @@ Jettez un oeil à [refine](https://github.com/refinedev/refine) avant de commenc
 
 ## ⚛️ React {#react}
 
-[Announcing Sandpack 2.0 and a Node.js runtime for any browser](https://codesandbox.io/blog/announcing-sandpack-2)
-
-https://twitter.com/codesandbox/status/1626304039251062785
-
----
-
-[The Power of Keys in Framer Motion](https://www.nan.fyi/keys-in-framer-motion)
-
----
-
 [useSignal() is the Future of Web Frameworks](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
 
 https://twitter.com/mhevery/status/1626269387438305280
@@ -60,6 +50,20 @@ https://twitter.com/jordwalke/status/1626718819443150849
 https://twitter.com/jordwalke/status/1626718819443150849
 
 - [Angular Reactivity with Signals](https://github.com/angular/angular/discussions/49090) + https://twitter.com/angular/status/1625939902046117890 + https://twitter.com/sarah_edo/status/1628065696247857152
+
+---
+
+[![sandpack 2](/emails/issues/135/sandpack2.jpg)](https://codesandbox.io/blog/announcing-sandpack-2)
+
+**[Announcing Sandpack 2.0 and a Node.js runtime for any browser](https://codesandbox.io/blog/announcing-sandpack-2)**
+
+CodeSandbox annonce la nouvelle version de Sandpack, un outil qui permet de créer des expériences interactives de live-coding dans le browser (éditeur de code + preview). Sandpack s'intègre bien avec React via un package dédié. La v1 était déjà utilisée sur le nouveau site React, par Josh Comeau et bien d'autres.
+
+Cette v2 repose sur la nouvelle technologie NodeBox qui permet de faire tourner Node.js dans le navigateur. Il est possible de faire tourner un meta-framework full-stack comme Next.js. Cela rappelle les WebContainers de StackBlitz, qui viennent d'ailleurs d'[annoncer la WebContainers API](https://blog.stackblitz.com/posts/webcontainer-api-is-here/). L'article explique les différences entre ces 2 technologies innovantes.
+
+---
+
+[The Power of Keys in Framer Motion](https://www.nan.fyi/keys-in-framer-motion)
 
 ---
 
