--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -39,69 +39,71 @@ Jettez un oeil à [refine](https://github.com/refinedev/refine) avant de commenc
 
 ## ⚛️ React {#react}
 
-[useSignal() is the Future of Web Frameworks](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
+[![useSignal() is the Future of Web Frameworks](/emails/issues/135/reactdocumentary.jpg)](https://www.youtube.com/watch?v=8pDqJVdNa44)
 
-https://twitter.com/mhevery/status/1626269387438305280
+**[React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)**
 
-https://twitter.com/acdlite/status/1626590880126889984
+Vous savez sans doute déjà qu'un documentaire sur React est sorti 😉! Je mets quelques liens sympa en bonus:
 
-https://twitter.com/jordwalke/status/1626718819443150849
-
-https://twitter.com/jordwalke/status/1626718819443150849
-
-- [Angular Reactivity with Signals](https://github.com/angular/angular/discussions/49090) + https://twitter.com/angular/status/1625939902046117890 + https://twitter.com/sarah_edo/status/1628065696247857152
+- 🎥 [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k): Michael Chan pose des questions intéressantes à l'équipe React originale.
+- 📜 [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary): interview avec Ida qui a créé le documentaire.
+- 📜 [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/): mon point de vue extérieur sur cette période.
 
 ---
 
-[![sandpack 2](/emails/issues/135/sandpack2.jpg)](https://codesandbox.io/blog/announcing-sandpack-2)
+[![useSignal() is the Future of Web Frameworks](/emails/issues/135/signals.jpg)](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
+
+**[`useSignal()` is the Future of Web Frameworks](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)**
+
+Misko est le créateur de Qwik et AngularJS. Il met en avant l'intérêt des signaux, et fait une comparaison avec la manière dont React fonctionne. React utilise directement la valeur du state, alors que les signaux utilisent un getter, et créé des souscriptions quand ce getter est appelé.
+
+Les signaux permettent d'optimiser automatiquement les re-renders avec une granularité fine, sans besoin de memoization. Les composants intermédiaires qui ne font parfois que du props drilling n'ont pas besoin de re-render.
+
+Cet article a été publié le lendemain de l'[annonce d'Angular](https://twitter.com/angular/status/1625939902046117890) qui prévoit d'utiliser les signaux (une [démo](https://twitter.com/sarah_edo/status/1628065696247857152) est maintenant disponible).
+
+Andrew Clark a [commenté](https://twitter.com/acdlite/status/1626590880126889984) sur la potentielle introduction des signaux dans React. Il préfère pour l'instant miser sur le compiler [React Forget](https://www.youtube.com/watch?v=lGEMwh32soc), dont on devrait avoir des nouvelles prochainement via un article React Labs. Je trouve que c'est une bonne chose que React aille à contre-courant et continuer d'explorer la direction actuelle.
+
+---
+
+[![Announcing Sandpack 2.0 and a Node.js runtime for any browser](/emails/issues/135/sandpack2.jpg)](https://codesandbox.io/blog/announcing-sandpack-2)
 
 **[Announcing Sandpack 2.0 and a Node.js runtime for any browser](https://codesandbox.io/blog/announcing-sandpack-2)**
 
 CodeSandbox annonce la nouvelle version de Sandpack, un outil qui permet de créer des expériences interactives de live-coding dans le browser (éditeur de code + preview). Sandpack s'intègre bien avec React via un package dédié. La v1 était déjà utilisée sur le nouveau site React, par Josh Comeau et bien d'autres.
 
-Cette v2 repose sur la nouvelle technologie NodeBox qui permet de faire tourner Node.js dans le navigateur. Il est possible de faire tourner un meta-framework full-stack comme Next.js. Cela rappelle les WebContainers de StackBlitz, qui viennent d'ailleurs d'[annoncer la WebContainers API](https://blog.stackblitz.com/posts/webcontainer-api-is-here/). L'article explique les différences entre ces 2 technologies innovantes.
+Cette v2 repose sur la nouvelle technologie NodeBox qui permet de faire tourner Node.js dans le navigateur. Il est possible de faire tourner Next.js, Vite, Astro et d'autres stacks.
+
+Cela rappelle les WebContainers de StackBlitz, qui viennent d'ailleurs d'[annoncer la WebContainers API](https://blog.stackblitz.com/posts/webcontainer-api-is-here/). L'article explique les différences entre ces 2 technologies innovantes.
 
 ---
 
-[The Power of Keys in Framer Motion](https://www.nan.fyi/keys-in-framer-motion)
-
----
-
----
-
-[Leveraging Server Context for Advanced Next.js Optimization Patterns](https://prismic.io/blog/advanced-nextjs-server-context)
-
----
-
-- 🐦 [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439)
+- 🐦 [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439). Il garde cependant son rôle dans l'équipe React.
 - 👀 [React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124): une PR intéressante qui permet aux composants client d'appeler des callbacks serveur, dans la tendance RPC actuelle.
 - 👀 [TanStack Start](https://twitter.com/sebastienlorber/status/1627740526551175190): nouveau meta-framework React en cours de dev?
-- 👀 [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072)
-- 👀 [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058)
-- 🧵 ["JSX could have been 2x faster if it was designed more optimally for JS VMs!"](https://twitter.com/mhevery/status/1626422858862960648)
+- 👀 [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072): nouvelle solution de Next.js pour remplacer les API routes?
+- 👀 [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058): React Aria veut proposer une couche un peu plus haut niveau pour faciliter l'usage de la librairie.
+- 🧵 ["JSX could have been 2x faster if it was designed more optimally for JS VMs!"](https://twitter.com/mhevery/status/1626422858862960648): thread intéressant, en particulier la réponse de Dan Abramov qui nuance la solution proposée.
 - 🧵 [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
-- 📖 [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): nouvelle doc
-- 📜 [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/)
+- 📖 [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): nouvelle doc disponible.
+- 📜 [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306): comme prévu, le framework Shopify Hydrogen passe sous Remix. L'article liste quelques bénéfices. En réalité, il ne s'agit pas vraiment d'une v2: ils ont décidé d'utiliser une stratégie de versioning différente.
+- 📜 [The Power of Keys in Framer Motion](https://www.nan.fyi/keys-in-framer-motion): super article interactif, explique l'intérêt d'utiliser les key React pour déclencher des animations.
+- 📜 [Leveraging Server Context for Advanced Next.js Optimization Patterns](https://prismic.io/blog/advanced-nextjs-server-context): très bon article sur le contexte serveur qui est toujours présent, mais est devenu plus implicite avec l'arrivée des Server Components. L'API bas niveau `AsyncLocalStorage` est utile pour dédupliquer les requêtes serveur et créer un cache.
+- 📜 [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react): j'ai [appris une technique](https://twitter.com/sebastienlorber/status/1628340871899893768) utile pour s'assurer que les error boundaries catchent aussi les erreurs en dehors du render React (callbacks, useEffect etc).
 - 📜 [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explique comment il décide si une feature sera intégrée à React-Query. Cela me fait penser au [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
-- 📜 [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/)
+- 📜 [The case for frameworks](https://seldo.com/posts/the_case_for_frameworks): réponse à Alex Russell, explique pourquoi on fait le choix d'adopter un framework assez lourd comme React malgré l'impact sur les performances.
+- 📜 [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/): liste quelques recommendations et anti-patterns des HOCs, sans pour autant les survendre. L'auteur aime les hooks, mais il reste quelques usages pertinents des HOCs.
+- 📜 [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/): technique utile à connaitre. Pour compléter: il ne faut pas avoir peur d'utiliser un context provider sur plusieurs niveaux, parfois dans le but d'enrichir la valeur du contexte.
+- 📜 [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/): Component Story Format 3 + TypeScript `satisfies` permettent d'améliorer la type safety.
 - 📜 [Maximising performance with React code splitting techniques](https://edvins.io/react-code-splitting-techniques)
-- 📜 [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react)
 - 📜 [Modularizing React Applications with Established UI Patterns](https://martinfowler.com/articles/modularizing-react-apps.html)
 - 📜 [A Historical Reference of React Criticism](https://www.zachleat.com/web/react-criticism/)
 - 📜 [A minimal, multi-framework, responsive image component](https://dev.to/ascorbic/a-minimal-multi-framework-responsive-image-component-3iop)
-- 📜 [The case for frameworks](https://seldo.com/posts/the_case_for_frameworks)
 - 📜 [Using WebSockets in a Redux Application](https://www.taniarascia.com/websockets-in-redux/)
 - 📜 [How to Integrate GreenSock with Remotion](https://enlear.academy/how-to-integrate-greensock-with-remotion-e4eee6f5a41f)
-- 📜 [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/)
-- 📜 [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306)
-- 📜 [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary)
-- 📜 [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/)
 - 📜 [What Netlify's Acquisition of Gatsby Really Means](https://remotesynthesis.com/blog/gatsby-plus-netlify/)
-- 🎥 [React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)
-- 🎥 [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k)
 - 🎥 [Fireship - 7 better ways to create a React app](https://www.youtube.com/watch?app=desktop&v=2OTq15A5s0Y)
 - 🎥 [Killing ReactJS - A Guide For Hopeful Frameworks](https://www.youtube.com/watch?v=LMUKsAf2Rfs)
-- 📦 [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): support Tailwind
+- 📦 [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): support Tailwind et PostCSS
 - 📦 [MDX 2.3](https://github.com/mdx-js/mdx/releases/tag/2.3.0): nouvelles options du compiler pour le support d'autres frameworks que React
 - 📦 [Unovis - modular data visualization framework for React, Angular, Svelte...](https://unovis.dev/)
 - 📦 [Redwood 4.1](https://github.com/redwoodjs/redwood/releases/tag/v4.1.0)
@@ -124,26 +126,34 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-[Expo SDK 48 beta is now available](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)
+[![Expo SDK 48 beta is now available](/emails/issues/135/expo48.jpg)](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)
 
-https://twitter.com/Baconbrix/status/1623803911290118144
+**[Expo SDK 48 beta is now available](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)**
+
+Le nouveau SDK Expo est sorti en beta il y a presque 2 semaine. La version stable ne devrait donc vraiment pas tarder! Au programme:
+
+- React Native 0.71.3 - React 18.2.0
+- Expo Image v1 RC
+- Expo Router v1 RC
+- EAS builders sous M1 par défaut
+- Moteur Hermes par défaut
+- Tous les modules Expo supportent Fabric - expérimental
 
 ---
 
 - 🐦 [Sebastian Markbåge about Server Components: "one of the reasons it was even funded by Meta initially was because of the promise it saw using server-driven technologies on native"](https://twitter.com/sebmarkbage/status/1623175042971344896): les React-Native Server Components ont bien un intérêt. Expo est sans doute le mieux placé pour les implémenter.
-- 📊 [State of React-Native 2022](https://results.stateofreactnative.com/): les résultats du sondage sont disponibles.
+- 👀 [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
+- 📊 [State of React-Native 2022 - Survey Results](https://results.stateofreactnative.com/)
 - 📜 [Expo Changelog: January 2023](https://blog.expo.dev/expo-changelog-january-2023-c5eab76df08)
 - 📜 [Expo - Sunsetting “expo publish” and Classic Updates](https://blog.expo.dev/sunsetting-expo-publish-and-classic-updates-6cb9cd295378)
-- 👀 [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
-- 💬 [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
-- 🐦 [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
-- 🎙️ [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
-- 📦 [@expo/html-elements@0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
-- 📦 [React-Native-MKKV 2.7.0 - fastWrites prop](https://twitter.com/mrousavy/status/1625059908927234048)
-- 📦 React-Native-Skia - [Headless Support](https://twitter.com/wcandillon/status/1622558366940778496) + [Web-only support](https://github.com/Shopify/react-native-skia/pull/1336): la librairie est en train de devenir plus "universelle".
-- 📦 [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
 - 📜 [React Native at STRV in 2023](https://www.aronberezkin.com/posts/react-native-at-strv-in-2023)
 - 📜 [How to use React Native Web with Storybook v7 beta](https://dev.to/dannyhw/how-to-use-react-native-web-with-storybook-v7-beta-1io7)
+- 📦 React-Native-Skia - [Headless Support](https://twitter.com/wcandillon/status/1622558366940778496) + [Web-only support](https://github.com/Shopify/react-native-skia/pull/1336): la librairie est en train de devenir plus "universelle".
+- 📦 [React-Native-MKKV 2.7.0](https://twitter.com/mrousavy/status/1625059908927234048)
+- 📦 [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
+- 📦 [@expo/html-element v0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)- 💬 [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
+- 🐦 [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
+- 🎙️ [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
 
 ---
 
@@ -173,12 +183,13 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-- 🎥 [React-Native-Paris - talks du 8 Février](https://www.youtube.com/playlist?list=PLZsRQnRG-mlJiCuv9q1nBkxaYP9AIl_Rn): 2 vidéos, sourcemaps et react-native-testing-library
-- 🎥 [React Query rend ton Code 200% Plus Simple](https://www.youtube.com/watch?v=3jlBocCieVU)
+- 🎥 [React-Native-Paris - 2 talks du 8 Février](https://www.youtube.com/playlist?list=PLZsRQnRG-mlJiCuv9q1nBkxaYP9AIl_Rn)
+- 🎥 [React Query rend ton code 200% plus simple](https://www.youtube.com/watch?v=3jlBocCieVU)
+- 🎥 [Tier list des meilleurs librairies CSS en React](https://www.youtube.com/watch?v=LdBcPcKDx8Q)
+- 🎥 [Sandpack 2.0, node-chatgpt-api, Node.js security - Actus de la semaine en JS](https://www.youtube.com/watch?v=DAenoU_TcWU)
+- 🎥 [tRPC : l'API révolutionnaire?](https://www.youtube.com/watch?v=i5ujev590Xw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
@@ -186,12 +197,11 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 - [ts-reset](https://github.com/total-typescript/ts-reset): idée intéressante, sorte de CSS reset pour TypeScript qui patch certaines parties pénibles. Par exemple, `.filter(Boolean)` devient un type-guard.
 - [rspack](https://www.npmjs.com/package/@rspack/core) + [oxc](https://github.com/Boshen/oxc): des devs ByteDance (TikTok) travaillent sur de nouveaux outils Rust, équivalent de Webpack/Babel
-- [WebContainer API is here](https://blog.stackblitz.com/posts/webcontainer-api-is-here/) + https://twitter.com/stackblitz/status/1625552724547993600
+- [HOTScript - Higher-Order TypeScript](https://github.com/gvergnaud/hotscript): si vous avez envie de faire du functional programming dans le type system, ce projet est pour vous 😄
 - [Web Push for Web Apps on iOS and iPadOS](https://webkit.org/blog/13878/web-push-for-web-apps-on-ios-and-ipados/)
 - [WebKit - Try out CSS Nesting today](https://webkit.org/blog/13813/try-css-nesting-today-in-safari-technology-preview/)
 - [Container queries land in stable browsers](https://web.dev/cq-stable/)
 - [TypeScript Course - Build a TypeScript Project From Scratch (free)](https://www.typescriptcourse.com/tutorials/build-a-typescript-project-from-scratch)
-- [HOTScript - Higher-Order TypeScript](https://github.com/gvergnaud/hotscript) + https://twitter.com/GabrielVergnaud/status/1624838833941381122
 - [Understanding Monomorphism to Improve Your JS Performance Up to 60x](https://www.builder.io/blog/monomorphic-javascript)
 - [Vercel Cron Jobs](https://twitter.com/leeerob/status/1625249090932994051)
 - [Declarative Shadow DOM](https://webkit.org/blog/13851/declarative-shadow-dom/)
