--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /135
-title: "React Hebdo #135: ..."
+title: "React Hebdo #135: Signals, Sandpack, React doc, Server References, TanStack Start, Next.js, Remix, Hydrogen, Storybook, Expo, TypeScript, rspack..."
 authors: [slorber]
 date: 03-21-2023
 image: /img/TWIR_POST.png
@@ -78,6 +78,7 @@ Cela rappelle les WebContainers de StackBlitz, qui viennent d'ailleurs d'[annonc
 ---
 
 - 🐦 [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439). Il garde cependant son rôle dans l'équipe React.
+- 🐦 [Netflix using React for its TV UI](https://twitter.com/sebastienlorber/status/1628391651835011076): on a tendance à l'oublier, ils communiquent très peu sur leur technologie propriétaire. Kaleb devait donner un talk à React NYC, mais la conf a été annulée: il cherche une nouvelle conférence pour nous parler de tout ça, invitez-le!
 - 👀 [React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124): une PR intéressante qui permet aux composants client d'appeler des callbacks serveur, dans la tendance RPC actuelle.
 - 👀 [TanStack Start](https://twitter.com/sebastienlorber/status/1627740526551175190): nouveau meta-framework React en cours de dev?
 - 👀 [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072): nouvelle solution de Next.js pour remplacer les API routes?
@@ -151,9 +152,11 @@ Le nouveau SDK Expo est sorti en beta il y a presque 2 semaine. La version stabl
 - 📦 React-Native-Skia - [Headless Support](https://twitter.com/wcandillon/status/1622558366940778496) + [Web-only support](https://github.com/Shopify/react-native-skia/pull/1336): la librairie est en train de devenir plus "universelle".
 - 📦 [React-Native-MKKV 2.7.0](https://twitter.com/mrousavy/status/1625059908927234048)
 - 📦 [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
-- 📦 [@expo/html-element v0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)- 💬 [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
+- 📦 [expo html-element v0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
 - 🐦 [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
+- 💬 [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
 - 🎙️ [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
+- 🎙️ [React-Native-Radio 260 - Unpacking React Native 0.71](https://reactnativeradio.com/episodes/rnr-260-typescript-by-default-unpacking-react-native-071)
 
 ---
 
