--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -13,7 +13,9 @@ React Hebdo vient de souffler sa 3ème bougie! J'ai fait un [post sur LinkedIn](
 
 Le [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) de la conf [React-Native-Connection](https://reactnativeconnection.io/) (1er Juin à Paris) est ouvert. N'hésitez pas à vous lancer. Le voyage et 2 nuits d'hôtel sont pris en charge pour les speakers.
 
-Nouveau: si jamais vous recrutez un dev React (en CDI ou freelance), **[contactez-moi](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**.
+Nouveauté: si jamais vous recrutez un dev React (en CDI ou freelance), **[contactez-moi](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**.
+
+Je vais changer la manière dont je fais le [thread Twitter](https://slo.im/thread) pour diverses raisons. En particulier, je trouve que le formalisme du thread me rend moins authentique et n'incite pas à créer des discussions intéressantes. J'ai aussi l'impression que l'algorithme Twitter aime de moins en moins les liens externes et me pénalise. Je continue d'être actif sur Twitter pour vous partager les nouvelles React, mais la forme va changer.
 
 <!-- truncate -->
 
