--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -9,13 +9,15 @@ unlisted: true
 
 Salut à tous !
 
-React Hebdo vient de souffler sa 3ème bougie! J'ai fait un [post sur LinkedIn](https://link.slo.im/B87Zl) pour expliquer ou j'en suis. TLDR: la newsletter est enfin viable, avec plus de **17500 abonnés**, une belle croissance, et 27k€ de CA généré en 2022. Merci à vous de m'avoir soutenu dans le temps!
+Après une petite pause, on rattrape 2 semaines de news cette semaine: c'est une édition bien remplie!
+
+React Hebdo a soufflé sa 3ème bougie! J'ai fait un [post sur LinkedIn](https://link.slo.im/B87Zl) pour expliquer ou j'en suis. TLDR: la newsletter est enfin viable, avec plus de **17500 abonnés**, une belle croissance, et 27k€ de CA généré en 2022. Merci à vous de m'avoir soutenu dans le temps!
 
 Le [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) de la conf [React-Native-Connection](https://reactnativeconnection.io/) (1er Juin à Paris) est ouvert. N'hésitez pas à vous lancer. Le voyage et 2 nuits d'hôtel sont pris en charge pour les speakers.
 
 Nouveauté: si jamais vous recrutez un dev React (en CDI ou freelance), **[contactez-moi](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**.
 
-Je vais changer la manière dont je fais le [thread Twitter](https://slo.im/thread) pour diverses raisons. En particulier, je trouve que le formalisme du thread me rend moins authentique et n'incite pas à créer des discussions intéressantes. J'ai aussi l'impression que l'algorithme Twitter aime de moins en moins les liens externes et me pénalise. Je continue d'être actif sur Twitter pour vous partager les nouvelles React, mais la forme va changer.
+Je vais changer la manière dont je fais le [thread Twitter](https://slo.im/thread) pour diverses raisons. En particulier, je trouve que le formalisme du thread me rend moins authentique et n'incite pas à créer des discussions intéressantes. J'ai aussi l'impression que l'algorithme Twitter aime de moins en moins les liens externes et me pénalise. Je vais continuer d'être actif sur Twitter pour vous partager les nouvelles React, mais la forme va changer.
 
 <!-- truncate -->
 
@@ -40,18 +42,6 @@ Jettez un oeil à [refine](https://github.com/refinedev/refine) avant de commenc
 ---
 
 ## ⚛️ React {#react}
-
-[![useSignal() is the Future of Web Frameworks](/emails/issues/135/reactdocumentary.jpg)](https://www.youtube.com/watch?v=8pDqJVdNa44)
-
-**[React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)**
-
-Vous savez sans doute déjà qu'un documentaire sur React est sorti 😉! Je mets quelques liens sympa en bonus:
-
-- 🎥 [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k): Michael Chan pose des questions intéressantes à l'équipe React originale.
-- 📜 [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary): interview avec Ida qui a créé le documentaire.
-- 📜 [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/): mon point de vue extérieur sur cette période.
-
----
 
 [![useSignal() is the Future of Web Frameworks](/emails/issues/135/signals.jpg)](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
 
@@ -79,9 +69,22 @@ Cela rappelle les WebContainers de StackBlitz, qui viennent d'ailleurs d'[annonc
 
 ---
 
+[![useSignal() is the Future of Web Frameworks](/emails/issues/135/reactdocumentary.jpg)](https://www.youtube.com/watch?v=8pDqJVdNa44)
+
+**[React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)**
+
+Vous savez sans doute déjà qu'un documentaire sur React est sorti 😉! Je mets quelques liens sympa en bonus:
+
+- 🎥 [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k): Michael Chan pose des questions intéressantes à l'équipe React originale.
+- 📜 [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary): interview avec Ida qui a créé le documentaire.
+- 📜 [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/): mon point de vue extérieur sur cette période.
+
+---
+
 - 🐦 [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439). Il garde cependant son rôle dans l'équipe React.
 - 🐦 [Netflix using React for its TV UI](https://twitter.com/sebastienlorber/status/1628391651835011076): on a tendance à l'oublier, ils communiquent très peu sur leur technologie propriétaire. Kaleb devait donner un talk à React NYC, mais la conf a été annulée: il cherche une nouvelle conférence pour nous parler de tout ça, invitez-le!
 - 👀 [React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124): une PR intéressante qui permet aux composants client d'appeler des callbacks serveur, dans la tendance RPC actuelle.
+- 👀 [React PR - Suspense for CPU-bound trees](https://twitter.com/acdlite/status/1628128850377940993): feature qui pourrait arriver prochainement dans une version mineure.
 - 👀 [TanStack Start](https://twitter.com/sebastienlorber/status/1627740526551175190): nouveau meta-framework React en cours de dev?
 - 👀 [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072): nouvelle solution de Next.js pour remplacer les API routes?
 - 👀 [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058): React Aria veut proposer une couche un peu plus haut niveau pour faciliter l'usage de la librairie.
