--- a/website/newsletter/135/index.mdx
+++ b/website/newsletter/135/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /135
-title: "This Week In React #135: ..."
+title: "This Week In React #135: Signals, Sandpack, React doc, Server References, TanStack Start, Next.js, Remix, Hydrogen, Storybook, Expo, TypeScript, rspack..."
 authors: [slorber]
 date: 03-21-2023
 image: /img/TWIR_POST.png
@@ -9,7 +9,13 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+After a little break, we catch up with 2 weeks of news: a packed edition!
+
+This Week In React just celebrated its 3rd birthday! I made a [little thread](https://link.slo.im/3-years) to explain where I am, including links to my "build in public" pages. TLDR: the newsletter is finally viable, with more than **17500 subscribers**, growing fast, and **27k€** turnover in 2022. Thanks to you for supporting me over the years!
+
+The [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) for the [React-Native-Connection](https://reactnativeconnection.io/) conference (June 1st in Paris) is open. Don't hesitate to participate. Travel and 2 nights of hotel are taken care of for the speakers. I am part of the program committee.
+
+I'm going to change the way I do the [Twitter thread](https://slo.im/thread) for various reasons. In particular, I find that the formality of the thread makes me less authentic and does not spark any interesting discussions. I also feel that the Twitter algorithm is becoming less and less fond of external links and is penalizing me. I will continue to be active on Twitter to share React news with you, but in another form.
 
 <!-- truncate -->
 
@@ -35,7 +41,76 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![useSignal() is the Future of Web Frameworks](/emails/issues/135/signals.jpg)](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)
+
+**[`useSignal()` is the Future of Web Frameworks](https://www.builder.io/blog/usesignal-is-the-future-of-web-frameworks)**
+
+Misko is the creator of Qwik and AngularJS. He highlights the interest of signals, and makes a comparison with the way React works. React uses directly the value of the state, while signals use a getter, and create subscriptions when this getter is called.
+
+Signals allow for automatic optimization of re-renders with fine granularity, without the need for memoization. Intermediate components that sometimes only do props drilling do not need to re-render.
+
+This article was published the day after the [Angular announcement](https://twitter.com/angular/status/1625939902046117890) that plans to use signals (a [demo](https://twitter.com/sarah_edo/status/1628065696247857152) is now available).
+
+Andrew Clark has [commented](https://twitter.com/acdlite/status/1626590880126889984) on the potential introduction of signals in React. He prefers for the moment to bet on the [React Forget](https://www.youtube.com/watch?v=lGEMwh32soc) compiler, which we should have news soon via a React Labs article. I think it's a good thing that React is going against the trend and continue to [explore the current direction](https://twitter.com/acdlite/status/1625599973420154881).
+
+---
+
+[![Announcing Sandpack 2.0 and a Node.js runtime for any browser](/emails/issues/135/sandpack2.jpg)](https://codesandbox.io/blog/announcing-sandpack-2)
+
+**[Announcing Sandpack 2.0 and a Node.js runtime for any browser](https://codesandbox.io/blog/announcing-sandpack-2)**
+
+CodeSandbox announced the new version of Sandpack, a tool that allows to create interactive live-coding experiences in the browser (code editor + preview). Sandpack integrates well with React thanks to a dedicated package. The v1 was already used on the new React beta docs site, by Josh Comeau and many others.
+
+This v2 is based on the new NodeBox technology which allows to run Node.js in the browser. It is possible to run Next.js, Vite, Astro and other stacks.
+
+This reminds of StackBlitz's technology, that just [announced the WebContainers API](https://blog.stackblitz.com/posts/webcontainer-api-is-here/). The Sandpack article explains the differences between NodeBox and WebContainers technologies.
+
+---
+
+[![useSignal() is the Future of Web Frameworks](/emails/issues/135/reactdocumentary.jpg)](https://www.youtube.com/watch?v=8pDqJVdNa44)
+
+**[React.js: The Documentary](https://www.youtube.com/watch?v=8pDqJVdNa44)**
+
+You probably already know that a documentary about React is out 😉 ! I'm putting some cool bonus links:
+
+- 🎥 [Q&A with the cast of React.js: The Documentary](https://www.youtube.com/watch?v=WzRSysq7F4k): Michael Chan asks some interesting questions to the original React team.
+- 📜 [Behind the Scenes with React.js: the Documentary](https://newsletter.pragmaticengineer.com/p/react-documentary): behind-the-scene interview with Ida who created the documentary.
+- 📜 [Adopting React in the Early Days](https://cult.honeypot.io/reads/adopting-react-in-the-early-days/): my outsider's perspective on this period.
+
+---
+
+- 🐦 [Andrew Clark - "I'm joining Vercel"](https://twitter.com/acdlite/status/1623353741750546439). He keeps his role in the React team.
+- 🐦 [Netflix using React for its TV UI](https://twitter.com/sebastienlorber/status/1628391651835011076): we tend to forget it because Netflix doesn't communicate much about their proprietary TV UI technology. Kaleb was supposed to give a talk at React NYC, but the conference was cancelled: he's looking for a new conference, so invite him!
+- 👀 [React PR - Enable passing Server References from Server to Client](https://github.com/facebook/react/pull/26124): an interesting PR that allows client components to call server callbacks, in the current RPC trend.
+- 👀 [React PR - Suspense for CPU-bound trees](https://twitter.com/acdlite/status/1628128850377940993): feature that could come soon in a minor version.
+- 👀 [TanStack Start](https://twitter.com/sebastienlorber/status/1627740526551175190): new React meta-framework being developed?
+- 👀 [Next.js Route Handlers](https://twitter.com/nextjs/status/1626341664402051072): new Next.js solution to replace routes API?
+- 👀 [RFC: React Aria Components](https://github.com/adobe/react-spectrum/pull/4058): React Aria wants to offer a slightly higher level layer to facilitate the use of the library.
+- 🧵 ["JSX could have been 2x faster if it was designed more optimally for JS VMs!"](https://twitter.com/mhevery/status/1626422858862960648): interesting thread, especially Dan Abramov's response, which nuances the proposition outcomes.
+- 🧵 [Dan Abramov - "20’s: Composing server and client as one paradigm"](https://twitter.com/dan_abramov/status/1625225990023655425)
+- 📖 [Migrating to Modern Redux](https://redux.js.org/usage/migrating-to-modern-redux): new available doc.
+- 📜 [Hydrogen v2 is Remixed](https://twitter.com/remix_run/status/1623744656701026306): as expected, the Shopify Hydrogen framework moved to Remix. The article lists some benefits. In reality, it's not really a v2: they decided to use a different versioning strategy.
+- 📜 [The Power of Keys in Framer Motion](https://www.nan.fyi/keys-in-framer-motion): great interactive article, explains the interest of using React keys to trigger animations.
+- 📜 [Leveraging Server Context for Advanced Next.js Optimization Patterns](https://prismic.io/blog/advanced-nextjs-server-context): very good article about server context which is still present, but has become more implicit with Server Components. The low level API `AsyncLocalStorage` is useful to deduplicate server requests and create a cache.
+- 📜 [How to handle errors in React](https://www.developerway.com/posts/how-to-handle-errors-in-react): today [I learned a useful fancy technique](https://twitter.com/sebastienlorber/status/1628340871899893768) to ensure that error boundaries catch all kind of errors, not just those thrown during React render.
+- 📜 [OSS Feature Decision Tree](https://tkdodo.eu/blog/oss-feature-decision-tree): Dominik explains how he decides if a feature will be integrated into React-Query. This reminds me of the [Extensible Web Manifesto](https://twitter.com/sebastienlorber/status/1627637410438815744).
+- 📜 [The case for frameworks](https://seldo.com/posts/the_case_for_frameworks): answer to Alex Russell, explains why we choose to adopt a rather heavy framework like React despite the negative impact on performance.
+- 📜 [Effective Higher-Order Components](https://www.bbss.dev/posts/effective-hocs/): lists some recommendations and anti-patterns of HOCs, without overselling them. The author likes hooks, but there are still some relevant uses of HOCs.
+- 📜 [Detecting Nested Components in React with the Context API](https://www.aleksandrhovhannisyan.com/blog/react-context-nested-components/): useful context technique to know. To complete: you should not be afraid to use a context provider on several levels, sometimes in order to enrich the value of the context as you go deeper in the tree.
+- 📜 [Improved type safety in Storybook 7](https://storybook.js.org/blog/improved-type-safety-in-storybook-7/): Component Story Format 3 + TypeScript `satisfies` improves the type safety.
+- 📜 [Maximising performance with React code splitting techniques](https://edvins.io/react-code-splitting-techniques)
+- 📜 [Modularizing React Applications with Established UI Patterns](https://martinfowler.com/articles/modularizing-react-apps.html)
+- 📜 [A Historical Reference of React Criticism](https://www.zachleat.com/web/react-criticism/)
+- 📜 [A minimal, multi-framework, responsive image component](https://dev.to/ascorbic/a-minimal-multi-framework-responsive-image-component-3iop)
+- 📜 [Using WebSockets in a Redux Application](https://www.taniarascia.com/websockets-in-redux/)
+- 📜 [How to Integrate GreenSock with Remotion](https://enlear.academy/how-to-integrate-greensock-with-remotion-e4eee6f5a41f)
+- 📜 [What Netlify's Acquisition of Gatsby Really Means](https://remotesynthesis.com/blog/gatsby-plus-netlify/)
+- 🎥 [Fireship - 7 better ways to create a React app](https://www.youtube.com/watch?app=desktop&v=2OTq15A5s0Y)
+- 🎥 [Killing ReactJS - A Guide For Hopeful Frameworks](https://www.youtube.com/watch?v=LMUKsAf2Rfs)
+- 📦 [Remix 1.13](https://github.com/remix-run/remix/releases/tag/remix%401.13.0): Tailwind + PostCSS support
+- 📦 [MDX 2.3](https://github.com/mdx-js/mdx/releases/tag/2.3.0): new compiler options to support other frameworks than React, relying on other naming conventions (className vs class for example)
+- 📦 [Unovis - modular data visualization framework for React, Angular, Svelte...](https://unovis.dev/)
+- 📦 [Redwood 4.1](https://github.com/redwoodjs/redwood/releases/tag/v4.1.0)
 
 <SubscribeFormEmbed />
 
@@ -55,7 +130,36 @@ You can also **analyze survey results** in custom-built dashboards, save your fo
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Expo SDK 48 beta is now available](/emails/issues/135/expo48.jpg)](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)
+
+**[Expo SDK 48 beta is now available](https://blog.expo.dev/expo-sdk-48-beta-is-now-available-7ee5713d0937)**
+
+The new SDK Expo was released in beta almost 2 weeks ago. The stable version should be available vey soon! Highlights:
+
+- React Native 0.71.3 - React 18.2.0
+- Expo Image v1 RC
+- Expo Router v1 RC
+- EAS builders under M1 by default
+- Hermes engine by default
+- All Expo modules support Fabric - experimental
+
+---
+
+- 🐦 [Sebastian Markbåge about Server Components: "one of the reasons it was even funded by Meta initially was because of the promise it saw using server-driven technologies on native"](https://twitter.com/sebmarkbage/status/1623175042971344896): another confirmation that React-Native Server Components make a lot of sense. Expo is probably the best placed to implement them.
+- 👀 [React-Navigation 7 alpha](https://twitter.com/reactnavigation/status/1626648568189620238): static configuration API
+- 📊 [State of React-Native 2022 - Survey Results](https://results.stateofreactnative.com/)
+- 📜 [Expo Changelog: January 2023](https://blog.expo.dev/expo-changelog-january-2023-c5eab76df08)
+- 📜 [Expo - Sunsetting “expo publish” and Classic Updates](https://blog.expo.dev/sunsetting-expo-publish-and-classic-updates-6cb9cd295378)
+- 📜 [React Native at STRV in 2023](https://www.aronberezkin.com/posts/react-native-at-strv-in-2023)
+- 📜 [How to use React Native Web with Storybook v7 beta](https://dev.to/dannyhw/how-to-use-react-native-web-with-storybook-v7-beta-1io7)
+- 📦 React-Native-Skia - [Headless Support](https://twitter.com/wcandillon/status/1622558366940778496) + [Web-only support](https://github.com/Shopify/react-native-skia/pull/1336): the lib is becoming more universal.
+- 📦 [React-Native-MKKV 2.7.0](https://twitter.com/mrousavy/status/1625059908927234048)
+- 📦 [expo-github-action v8](https://twitter.com/cedricvanputten/status/1627732937008349186)
+- 📦 [expo html-element v0.4.1](https://twitter.com/Baconbrix/status/1625984235713581057)
+- 🐦 [SpaceX Starlink using Expo](https://twitter.com/sebastienlorber/status/1626150388704452611)
+- 💬 [Moving Fastlane to Mobile Native Foundation?](https://github.com/MobileNativeFoundation/discussions/discussions/194)
+- 🎙️ [React-Native-Radio 259 - Tamagui with Nate Weinert](https://reactnativeradio.com/episodes/rnr-259-tamagui-with-nate-weinert)
+- 🎙️ [React-Native-Radio 260 - Unpacking React Native 0.71](https://reactnativeradio.com/episodes/rnr-260-typescript-by-default-unpacking-react-native-071)
 
 ---
 
@@ -79,14 +183,26 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 ## 🔀 Other {#other}
 
-<Todo />
+- [ts-reset](https://github.com/total-typescript/ts-reset): interesting idea, a kind of CSS reset for TypeScript that patches some annoying TS parts. For example, `.filter(Boolean)` becomes a real type-guard and does not return `undefined` types. Many other methods return `unknown` instead of `any`.
+- [rspack](https://www.npmjs.com/package/@rspack/core) + [oxc](https://github.com/Boshen/oxc): ByteDance (TikTok) devs working on Rust alternatives to Webpack/Babel.
+- [HOTScript - Higher-Order TypeScript](https://github.com/gvergnaud/hotscript): if you want to do functional programming in the type system, this project is for you 😄
+- [Web Push for Web Apps on iOS and iPadOS](https://webkit.org/blog/13878/web-push-for-web-apps-on-ios-and-ipados/)
+- [WebKit - Try out CSS Nesting today](https://webkit.org/blog/13813/try-css-nesting-today-in-safari-technology-preview/)
+- [Container queries land in stable browsers](https://web.dev/cq-stable/)
+- [TypeScript Course - Build a TypeScript Project From Scratch (free)](https://www.typescriptcourse.com/tutorials/build-a-typescript-project-from-scratch)
+- [Understanding Monomorphism to Improve Your JS Performance Up to 60x](https://www.builder.io/blog/monomorphic-javascript)
+- [Vercel Cron Jobs](https://twitter.com/leeerob/status/1625249090932994051)
+- [Declarative Shadow DOM](https://webkit.org/blog/13851/declarative-shadow-dom/)
+- [Rust to WebAssembly the hard way](https://surma.dev/things/rust-to-webassembly/)
+- [Lighthouse 10.0](https://developer.chrome.com/blog/lighthouse-10-0/)
+- [Safari Technology Preview 163](https://webkit.org/blog/13839/release-notes-for-safari-technology-preview-163/)
+- [Bringing Javascript to WebAssembly for Shopify Functions](https://shopify.engineering/javascript-in-webassembly-for-shopify-functions)
+- [How Deno’s Founder Is Rebuilding the Runtime of the Web](https://www.sequoiacap.com/article/deno-spotlight/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/135/meme.jpg)](https://twitter.com/t3dotgg/status/1626393874393595907)
 
 See ya! 👋
