--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -10,7 +10,7 @@ Salut à tous !
 
 Après une petite pause, on rattrape 2 semaines de news cette semaine: c'est une édition bien remplie!
 
-React Hebdo a soufflé sa 3ème bougie! J'ai fait un [post sur LinkedIn](https://link.slo.im/B87Zl) pour expliquer ou j'en suis. TLDR: la newsletter est enfin viable, avec plus de **17500 abonnés**, une belle croissance, et 27k€ de CA généré en 2022. Merci à vous de m'avoir soutenu dans le temps!
+**React Hebdo a soufflé sa 3ème bougie!** J'ai fait un [post sur LinkedIn](https://link.slo.im/B87Zl) pour expliquer ou j'en suis. TLDR: la newsletter est enfin viable, avec plus de **17500 abonnés**, une belle croissance, et 27k€ de CA généré en 2022. Merci à vous de m'avoir soutenu dans le temps!
 
 Le [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) de la conf [React-Native-Connection](https://reactnativeconnection.io/) (1er Juin à Paris) est ouvert. N'hésitez pas à vous lancer. Le voyage et 2 nuits d'hôtel sont pris en charge pour les speakers.
 
