--- a/website/newsletter/135/index.mdx
+++ b/website/newsletter/135/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 After a little break, we catch up with 2 weeks of news: a packed edition!
 
-**This Week In React just celebrated its 3rd birthday!** I made a [little thread](https://link.slo.im/3-years) to explain where I am, including links to my "build in public" pages. TLDR: the newsletter is finally viable, with more than **17500 subscribers**, growing fast, and **27k€** turnover in 2022. Thanks to you for supporting me over the years!
+**This Week In React just celebrated its 3rd birthday!** I made a [little thread](https://link.slo.im/3-years) to explain where I am, including links to my "build in public" pages. TLDR: the newsletter is finally viable, with more than **17500 subscribers**, growing fast, and **27k€** turnover in 2022. Thanks you for supporting me over the years and making all this possible!
 
 The [Call for Paper](https://conference-hall.io/public/event/5hkuk4Ueg7U9y0uwNRRK) for the [React-Native-Connection](https://reactnativeconnection.io/) conference (June 1st in Paris) is open. Don't hesitate to participate. Travel and 2 nights of hotel are taken care of for the speakers. I am part of the program committee.
 
