--- a/website/newsletter/136/index.mdx
+++ b/website/newsletter/136/index.mdx
@@ -57,21 +57,22 @@ Suncel CMS as developer :
 
 ## 💸 Sponsor {#sponsor2}
 
-**[![Build and Run Synthetic Monitoring That Scales](/emails/issues/134/checkly.jpg)](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react-february)**
+**[![Build and Run Synthetic Monitoring That Scales](/emails/issues/134/checkly.jpg)](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)**
 
-**[Build and Run Synthetic Monitoring That Scales](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react-february)**
+**[Build and Run Synthetic Monitoring That Scales](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)**
 
-**[Checkly](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react-february)** lets you easily deploy Playwright scripts to monitor apps, websites and APIs, from Dev to Production. Validate crucial user flows, collect error traces, capture screenshots and record performance metrics to understand how your app performs for users across the globe!
+You build it; you own it! It's a simple mantra that has driven software development for years. But how do you monitor complex React applications the best way?
 
-Use [Checkly](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react-february) to:
+- First: use Playwright to mimic user flows and guarantee that your app works.
+- Second: be confident that the used APIs are up and running.
 
-- ✅ Run programmable API and Browser checks to validate app performance
-- ✅ Get alerts when checks are failing, and easily integrate Checkly with your existing tech stack
-- ✅ Leverage Playwright and Javascript to maximize your monitoring and testing efforts
+"Monitoring as Code" - is a new way to define, test & deploy your entire application monitoring directly from code.
 
-[Start monitoring your apps for free](https://www.checklyhq.com/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react-february)
+- Code your monitoring setup and keep in version control
+- Test your application in preview environments to avoid bugs and regressions
+- Deploy your tests and start monitoring production
 
----
+[Bring your monitoring next to your code for free](https://www.checklyhq.com/product/monitoring-as-code/?utm_medium=email&utm_source=newsletter&utm_campaign=this-week-in-react)
 
 ## 📱 React-Native {#react-native}
 
