--- a/website/newsletter/136/index.mdx
+++ b/website/newsletter/136/index.mdx
@@ -29,13 +29,9 @@ import Support from "../_support.mdx";
 
 **[Build reusable blocks. Publish content faster. Get better Core Web Vitals and SEO.](https://suncel.io/)**
 
-**Content editors** : a game changer for companies that need to produce a lot of content and\
-have a strong SEO strategy. Marketers and content editors can edit and publish pages\
-without any complexity. Eliminate long delays and publish instantly. Pages and images are\
-optimized thanks to Next.js in order to achieve perfect Core Web Vitals scores.
+**Content editors** : a game changer for companies that need to produce a lot of content and have a strong SEO strategy. Marketers and content editors can edit and publish pages without any complexity. Eliminate long delays and publish instantly. Pages and images are optimized thanks to Next.js in order to achieve perfect Core Web Vitals scores.
 
-**Developers :** plug and play with your existing Next.js app. Number of benefits to use\
-Suncel CMS as developer :
+**Developers :** plug and play with your existing Next.js app. Number of benefits to use Suncel CMS as developer :
 
 - Build your reusable blocks in React
 - SEO Meta and sitemap are generated automatically (thanks to our SEO module)
