--- a/website/newsletter/137/index.mdx
+++ b/website/newsletter/137/index.mdx
@@ -29,12 +29,12 @@ import Support from "../_support.mdx";
 
 **[Build reusable blocks. Publish content faster. Get better Core Web Vitals and SEO.](https://suncel.io/)**
 
-**Content editors** : a game changer for companies that need to produce a lot of content and\
-have a strong SEO strategy. Marketers and content editors can edit and publish pages\
-without any complexity. Eliminate long delays and publish instantly. Pages and images are\
+**Content editors** : a game changer for companies that need to produce a lot of content and
+have a strong SEO strategy. Marketers and content editors can edit and publish pages
+without any complexity. Eliminate long delays and publish instantly. Pages and images are
 optimized thanks to Next.js in order to achieve perfect Core Web Vitals scores.
 
-**Developers :** plug and play with your existing Next.js app. Number of benefits to use\
+**Developers :** plug and play with your existing Next.js app. Number of benefits to use
 Suncel CMS as developer :
 
 - Build your reusable blocks in React
@@ -44,7 +44,6 @@ Suncel CMS as developer :
 - No routing system needed to fit the CMS
 
 **[Visit Suncel.io](https://suncel.io/)** | **[5mn demo video](https://www.youtube.com/watch?v=LUupLEZKp3w)**
-
 
 ---
 
@@ -66,7 +65,6 @@ Suncel CMS as developer :
 
 You can also **analyze survey results** in custom-built dashboards, save your forms to PDF, or simply **convert them to editable PDF files**. It offers native support for **React and Angular rendering** and total freedom of choice as to the backend, because **any server + database combination is fully compatible**.
 
-
 ---
 
 ## 📱 React-Native {#react-native}
@@ -76,7 +74,6 @@ You can also **analyze survey results** in custom-built dashboards, save your fo
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
-
 
 🧑‍💼 [**Passionfroot - Senior Full-stack Engineer (Remix) - €160k+, Berlin/remote**](https://passionfroot.recruitee.com/o/senior-fullstack-engineer)
 
